tests/samples/positive/pattern_matching/match_expression.ax
module match_expression;

enum Choice: u8 {
    zero = 0,
    one = 1,
}

fn score(choice: Choice) {
    return match choice {
        .zero => {
            let value = 39;
            value + 1
        },
        .one => 41,
    };
}

fn main() -> i32 {
    return score(Choice.zero) - 40;
}
