tests/samples/negative/pattern_matching/enum_payload_constructor_wrong_type.ax
module enum_payload_constructor_wrong_type;

enum Packet: u8 {
    int(i32) = 1,
}

fn main() -> i32 {
    let packet = Packet.int(true);
    return 0;
}
